<resources>
    <string name="app_name">Banco-almaar</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="introduce_la_contrasena">Introduce la contraseña</string>
    <string name="introduce_dni">Introduce el DNI</string>
    <string name="entrar">Entrar</string>
    <string name="salir">Salir</string>
    <string name="error_dni_requerido">El DNI es obligatorio</string>
    <string name="error_contrasena_requerida">La contraseña es obligatoria</string>
    <string name="bienvenido_con_dni">Bienvenido/a, %1$s</string>
    <string name="bienvenido">Bienvenido/a</string>
    <string name="bienvenido_banco">Bienvenido/a a mi banco</string>
    <string name="posicion_global">Posición global</string>
    <string name="movimientos">Movimientos</string>
    <string name="transferencias">Transferencias</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="promociones">Promociones</string>
    <string name="cajeros">Cajeros</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="repite_contrasena">Repite la contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="error_contrasena_no_coincide">Las contraseñas no coinciden</string>
    <string name="clave_cambiada_mock">Clave cambiada (simulado)</string>
    <string name="funcionalidad_pendiente">Funcionalidad pendiente</string>
    <string name="obligatorio">Obligatorio</string>
    <string name="cuentas">Cuentas:</string>
    <string name="selecciona_cuenta">Selecciona la cuenta:</string>
    <string name="ultimos_movimientos">Últimos movimientos:</string>
    <string name="importe_label">Importe:</string>
    <!-- Transferencia -->
    <string name="elige_tu_cuenta">Elige tu cuenta:</string>
    <string name="cuenta_propia">Cuenta propia</string>
    <string name="cuenta_ajena">Cuenta ajena</string>
    <string name="introduce_cuenta_ajena">Escribe el núm. cuenta ajena</string>
    <string name="cantidad">Cantidad:</string>
    <string name="enviar">Enviar</string>
    <string name="enviar_justificante">Enviar justificante</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="cuenta_origen">Cuenta origen</string>
    <string name="cuenta_destino">Cuenta destino</string>
    <string name="error_origen_requerido">Selecciona cuenta de origen</string>
    <string name="error_destino_requerido">Introduce cuenta de destino</string>
    <string name="error_importe_requerido">Introduce un importe</string>
</resources>