<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="24dp">

    <!-- DNI -->

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="34dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_dni"
        app:helperText="@string/obligatorio"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/introduce_la_contrasena"
        app:helperText="@string/obligatorio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUser"
        app:endIconMode="password_toggle"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"

        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEntrar"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:text="@string/entrar"
        app:cornerRadius="24dp"
        app:backgroundTint="@color/purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSalir"
        app:layout_constraintTop_toBottomOf="@+id/tilContrasena"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSalir"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:text="@string/salir"
        app:cornerRadius="24dp"
        app:backgroundTint="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnEntrar"
        app:layout_constraintTop_toBottomOf="@+id/tilContrasena"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="14dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>